// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`도구 스키마 스냅샷 > xbrush_chat 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "frequency_penalty": {
      "description": "Penalize frequent tokens (-2 to 2). Ignored on models with constraints.penaltiesHonored:false (gemini, anthropic, grok).",
      "maximum": 2,
      "minimum": -2,
      "type": "number",
    },
    "max_tokens": {
      "description": "Upper bound on generated tokens (1-65536), reasoning included. Keep modest — the response must finish within the ~30s gateway limit.",
      "maximum": 65536,
      "minimum": 1,
      "type": "integer",
    },
    "messages": {
      "description": "Conversation so far, oldest first (1-1000 messages). The completion answers the last user message.",
      "items": {
        "additionalProperties": false,
        "properties": {
          "content": {
            "anyOf": [
              {
                "anyOf": [
                  {
                    "description": "Plain message text (up to 1,000,000 characters). Must be non-empty except on assistant messages that carry tool_calls.",
                    "maxLength": 1000000,
                    "type": "string",
                  },
                  {
                    "description": "Multimodal parts: {type:'text', text} and/or {type:'image_url', image_url:{url, detail?}}. Image parts require a vision-capable model (constraints.vision in xbrush_list_models — all current models except glm-5.2 and deepseek-v4-flash; max images per request in constraints.maxImages).",
                    "items": {
                      "anyOf": [
                        {
                          "additionalProperties": false,
                          "properties": {
                            "text": {
                              "description": "Text content (non-empty, up to 1,000,000 characters).",
                              "maxLength": 1000000,
                              "minLength": 1,
                              "type": "string",
                            },
                            "type": {
                              "const": "text",
                              "type": "string",
                            },
                          },
                          "required": [
                            "type",
                            "text",
                          ],
                          "type": "object",
                        },
                        {
                          "additionalProperties": false,
                          "properties": {
                            "image_url": {
                              "additionalProperties": false,
                              "properties": {
                                "detail": {
                                  "description": "Vision fidelity vs. cost, passed through to the model vendor: 'low', 'high', or 'auto'. 'low' is drastically cheaper (~98 prompt tokens vs ~1,400 per image on seed-2.0-mini; honored for billing on OpenAI models — constraints.imageDetailHonored); omitted = vendor default (high-tier cost).",
                                  "type": "string",
                                },
                                "url": {
                                  "description": "Image as an https URL or a data: URL (base64). Minimum dimension 14px. Upload local files first with xbrush_file_upload and pass the CDN URL.",
                                  "minLength": 1,
                                  "type": "string",
                                },
                              },
                              "required": [
                                "url",
                              ],
                              "type": "object",
                            },
                            "type": {
                              "const": "image_url",
                              "type": "string",
                            },
                          },
                          "required": [
                            "type",
                            "image_url",
                          ],
                          "type": "object",
                        },
                      ],
                    },
                    "minItems": 1,
                    "type": "array",
                  },
                ],
              },
              {
                "type": "null",
              },
            ],
            "description": "Message content: a plain string, or an array of text/image_url parts (vision). Required (non-empty) on every message except an assistant message with tool_calls, where it may be empty, null, or omitted. For role:'tool' put the function's result here (commonly a JSON string).",
          },
          "role": {
            "description": "Message author: system (instructions), user, assistant (prior model turns), or tool (a function result answering an assistant tool_call). ('developer' is not accepted.)",
            "enum": [
              "system",
              "user",
              "assistant",
              "tool",
            ],
            "type": "string",
          },
          "tool_call_id": {
            "description": "Tool messages only (required there): the id of the assistant tool_calls entry this message answers.",
            "minLength": 1,
            "type": "string",
          },
          "tool_calls": {
            "description": "Assistant messages only: the tool_calls array from a prior response, echoed back VERBATIM when returning function results.",
            "items": {
              "additionalProperties": false,
              "properties": {
                "function": {
                  "additionalProperties": false,
                  "properties": {
                    "arguments": {
                      "description": "JSON-encoded arguments STRING (not an object), echoed back verbatim.",
                      "type": "string",
                    },
                    "name": {
                      "description": "Function name as returned by the model.",
                      "minLength": 1,
                      "type": "string",
                    },
                  },
                  "required": [
                    "name",
                    "arguments",
                  ],
                  "type": "object",
                },
                "id": {
                  "description": "Tool call id exactly as the model returned it (e.g. call_abc123).",
                  "minLength": 1,
                  "type": "string",
                },
                "type": {
                  "const": "function",
                  "type": "string",
                },
              },
              "required": [
                "id",
                "type",
                "function",
              ],
              "type": "object",
            },
            "minItems": 1,
            "type": "array",
          },
        },
        "required": [
          "role",
        ],
        "type": "object",
      },
      "maxItems": 1000,
      "minItems": 1,
      "type": "array",
    },
    "model": {
      "description": "LLM model ID: z-ai/glm-5.2, bytedance/seed-2.0-mini, bytedance/seed-2.1-turbo, google/gemini-3.1-flash-lite, google/gemini-3.5-flash-lite, anthropic/claude-sonnet-5, anthropic/claude-opus-5, deepseek/deepseek-v4-flash, openai/gpt-4o, openai/gpt-4o-mini, openai/gpt-5.4, xai/grok-4.3. Use xbrush_list_models with category='text' to see per-token pricing, vision / function-calling / structured-output support, and per-model param quirks.",
      "type": "string",
    },
    "presence_penalty": {
      "description": "Penalize tokens already present (-2 to 2). Same penaltiesHonored caveat.",
      "maximum": 2,
      "minimum": -2,
      "type": "number",
    },
    "reasoning_effort": {
      "description": "Reasoning budget for reasoning-capable models: none (server default, fastest) / minimal / low / medium / high / max. Per-model adjustments are reported as PARAM_ADJUSTED warnings (gemini: max→high, none→minimal; gpt-5.4: minimal→low, and tools force none; glm-5.2: low/medium→high; gpt-4o family has no reasoning). Higher efforts can exceed the ~30s gateway limit.",
      "enum": [
        "none",
        "minimal",
        "low",
        "medium",
        "high",
        "max",
      ],
      "type": "string",
    },
    "response_format": {
      "anyOf": [
        {
          "additionalProperties": false,
          "description": "Ask for a syntactically valid JSON object (also mention JSON in the prompt).",
          "properties": {
            "type": {
              "const": "json_object",
              "type": "string",
            },
          },
          "required": [
            "type",
          ],
          "type": "object",
        },
        {
          "additionalProperties": false,
          "description": "Constrain the output to a JSON Schema (structured outputs).",
          "properties": {
            "json_schema": {
              "additionalProperties": false,
              "properties": {
                "description": {
                  "type": "string",
                },
                "name": {
                  "description": "Schema name (required by OpenAI-compatible vendors).",
                  "minLength": 1,
                  "type": "string",
                },
                "schema": {
                  "additionalProperties": {},
                  "description": "JSON Schema the output must conform to.",
                  "type": "object",
                },
                "strict": {
                  "description": "Strict schema adherence (OpenAI structured outputs).",
                  "type": "boolean",
                },
              },
              "required": [
                "name",
              ],
              "type": "object",
            },
            "type": {
              "const": "json_schema",
              "type": "string",
            },
          },
          "required": [
            "type",
            "json_schema",
          ],
          "type": "object",
        },
      ],
      "description": "Structured output: {type:'json_object'} or {type:'json_schema', json_schema:{name, schema, strict?}}. Honored on models with constraints.structuredOutputHonored (openai/*, gemini-3.5-flash-lite); other models ignore it with a PARAM_DROPPED warning.",
    },
    "stop": {
      "anyOf": [
        {
          "description": "A single stop sequence (non-empty).",
          "minLength": 1,
          "type": "string",
        },
        {
          "description": "1-4 stop sequences (non-empty strings).",
          "items": {
            "minLength": 1,
            "type": "string",
          },
          "maxItems": 4,
          "minItems": 1,
          "type": "array",
        },
      ],
      "description": "Stop sequence(s): generation halts before emitting any of these. A non-empty string or an array of 1-4. Ignored on xai/grok-4.3 (constraints.stopHonored:false).",
    },
    "temperature": {
      "description": "Sampling temperature (0-2). Higher = more random. Ignored (PARAM_DROPPED warning) on models with constraints.samplingHonored:false — anthropic/*, gemini-3.5-flash-lite, gpt-5.4.",
      "maximum": 2,
      "minimum": 0,
      "type": "number",
    },
    "tool_choice": {
      "anyOf": [
        {
          "description": "'auto' (default — model decides), 'none' (suppress calls this turn), or 'required' (must call something; may yield an empty tool_calls response if no tool fits — prefer 'auto').",
          "minLength": 1,
          "type": "string",
        },
        {
          "additionalProperties": false,
          "description": "Force one specific function. Only models with constraints.forcedChoiceHonored obey this (every current model except z-ai/glm-5.2, which picks its own tool and the response carries a PARAM_NOT_HONORED warning).",
          "properties": {
            "function": {
              "additionalProperties": false,
              "properties": {
                "name": {
                  "minLength": 1,
                  "type": "string",
                },
              },
              "required": [
                "name",
              ],
              "type": "object",
            },
            "type": {
              "const": "function",
              "type": "string",
            },
          },
          "required": [
            "type",
            "function",
          ],
          "type": "object",
        },
      ],
      "description": "How the model may use \`tools\`: 'auto' (default), 'none', 'required', or {type:'function', function:{name}} to force one function (models with constraints.forcedChoiceHonored only — glm-5.2 ignores it with a PARAM_NOT_HONORED warning).",
    },
    "tools": {
      "description": "Function definitions the model may call (OpenAI format; ≤32 functions, ≤32KB serialized). All current models support function calling (constraints.functionCalling). Tool schemas are billed as input tokens on EVERY request plus a fixed per-model overhead (constraints.toolsFixedTokens: 50-500) — omit on requests that don't need them.",
      "items": {
        "additionalProperties": false,
        "properties": {
          "function": {
            "additionalProperties": false,
            "properties": {
              "description": {
                "description": "What the function does — helps the model decide when to call it.",
                "type": "string",
              },
              "name": {
                "description": "Function name: 1-64 chars of letters, digits, _ or - (server-enforced).",
                "pattern": "^[a-zA-Z0-9_-]{1,64}$",
                "type": "string",
              },
              "parameters": {
                "additionalProperties": {},
                "description": "JSON Schema object describing the function's arguments (OpenAI format). Omit for a no-argument function.",
                "type": "object",
              },
            },
            "required": [
              "name",
            ],
            "type": "object",
          },
          "type": {
            "const": "function",
            "type": "string",
          },
        },
        "required": [
          "type",
          "function",
        ],
        "type": "object",
      },
      "maxItems": 32,
      "type": "array",
    },
    "top_p": {
      "description": "Nucleus sampling probability mass (0-1). Same samplingHonored caveat as temperature.",
      "maximum": 1,
      "minimum": 0,
      "type": "number",
    },
  },
  "required": [
    "model",
    "messages",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_file_upload 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "file_path": {
      "description": "Absolute path to the local file to upload.",
      "type": "string",
    },
    "strategy": {
      "description": "Upload strategy: 'auto' (default) picks by file size; 'direct' uses /v1/files/upload; 'presign' uses /v1/files/presign + S3.",
      "enum": [
        "auto",
        "direct",
        "presign",
      ],
      "type": "string",
    },
  },
  "required": [
    "file_path",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_get_request 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "request_id": {
      "description": "Request ID (starts with 'req', 24 characters).",
      "minLength": 24,
      "type": "string",
    },
  },
  "required": [
    "request_id",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_image_edit 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "aspect_ratio": {
      "description": "Aspect ratio for resolution-based edit models (e.g. "16:9"). gpt-image-2-edit supports 1:1, 3:2, 2:3, 4:3, 3:4, 4:5, 16:9, 9:16, 21:9, 1.91:1 at 1K/2K — at 4K only 16:9, 9:16, 21:9, 1.91:1. Special value "custom" makes gpt-image-2-edit use width×height as the exact output size (both required, each a multiple of 16, longest edge ≤3840, total pixels 655,360–8,294,400). seedream-*-edit / nano-banana-*-edit accept their own sets; an unsupported value is rejected with the list of allowed ratios.",
      "minLength": 1,
      "type": "string",
    },
    "background": {
      "description": "Background handling for models that support it (e.g. gpt-image-2 transparent PNGs): auto (default), opaque, transparent.",
      "enum": [
        "auto",
        "opaque",
        "transparent",
      ],
      "type": "string",
    },
    "guidance_scale": {
      "description": "Guidance scale (0-50) for diffusion edit models that expose it.",
      "maximum": 50,
      "minimum": 0,
      "type": "number",
    },
    "height": {
      "description": "Output height in pixels (256-4096) for megapixel-based models; for outpaint models, the target canvas height. Resolution-based edit models ignore it unless aspect_ratio:"custom" (see width).",
      "maximum": 4096,
      "minimum": 256,
      "type": "integer",
    },
    "idea": {
      "description": "Non-English edit instruction (server-translated). Use prompt for English.",
      "minLength": 1,
      "type": "string",
    },
    "image_url": {
      "description": "URL of the primary source image to edit (also the first reference).",
      "format": "uri",
      "type": "string",
    },
    "image_urls": {
      "description": "Additional reference image URLs (max 9) for models that compose from multiple references (e.g. gpt-image-2-edit, nano-banana-edit, seedream-5.0-pro-edit). Appended after image_url, so the model receives [image_url, ...image_urls]. Omit for single-reference edits.",
      "items": {
        "format": "uri",
        "type": "string",
      },
      "maxItems": 9,
      "minItems": 1,
      "type": "array",
    },
    "loras": {
      "description": "Apply trained LoRA(s): [{url, weight}] with the weights URL from xbrush_lora_train output and weight 0-2. Use with a LoRA-capable base model and include the trigger word in the prompt.",
      "items": {
        "additionalProperties": false,
        "properties": {
          "url": {
            "description": "Trained LoRA weights URL (from a completed xbrush_lora_train request).",
            "format": "uri",
            "type": "string",
          },
          "weight": {
            "description": "LoRA strength 0-2 (1 = trained strength).",
            "maximum": 2,
            "minimum": 0,
            "type": "number",
          },
        },
        "required": [
          "url",
          "weight",
        ],
        "type": "object",
      },
      "minItems": 1,
      "type": "array",
    },
    "mask_url": {
      "description": "Mask image URL. White areas = edit, black areas = preserve. (For object removal / plain hole-filling without a prompt, see xbrush_image_inpaint.)",
      "format": "uri",
      "type": "string",
    },
    "mode": {
      "description": "Deprecated hint — the endpoint no longer recognizes it (ignored server-side). The selected model determines the operation; for outpainting prefer xbrush_image_outpaint.",
      "enum": [
        "inpaint",
        "outpaint",
      ],
      "type": "string",
    },
    "model": {
      "description": "Editing model: qwen-image-edit, nano-banana-edit, nano-banana-2-edit, nano-banana-pro-edit, seedream-4.5-edit, seedream-5.0-pro-edit, flux.2-pro-edit, hunyuan-image-3.0-instruct-edit, gpt-image-2-edit. Use xbrush_list_models(category='image'), featureType 'edit'. For outpainting use xbrush_image_outpaint (dedicated endpoint) or an outpaint model here (flux-outpaint, qwen-outpaint, flux.2-pro-outpaint).",
      "type": "string",
    },
    "n": {
      "description": "Number of edited images (1-8). Default: 1.",
      "maximum": 8,
      "minimum": 1,
      "type": "integer",
    },
    "negative_prompt": {
      "description": "Elements to exclude from the edited image.",
      "type": "string",
    },
    "prompt": {
      "description": "Text instruction describing the desired edits (English; use idea for other languages).",
      "minLength": 1,
      "type": "string",
    },
    "quality": {
      "description": "Output quality tier. Applies to byResolutionAndQuality models (gpt-image-2-edit); higher = better and more expensive. Server default is high if omitted.",
      "enum": [
        "low",
        "medium",
        "high",
      ],
      "type": "string",
    },
    "resolution": {
      "description": "Output resolution tier for resolution-based edit models (gpt-image-2-edit, seedream-*-edit, nano-banana-pro/2-edit). Examples: "1K", "2K", "4K".",
      "minLength": 1,
      "type": "string",
    },
    "sampler": {
      "description": "Sampler name for diffusion edit models that expose it (free-form, model-validated).",
      "minLength": 1,
      "type": "string",
    },
    "seed": {
      "description": "Random seed for reproducible results.",
      "type": "integer",
    },
    "width": {
      "description": "Output width in pixels (256-4096) for megapixel-based models; for outpaint models, the target canvas width. Resolution-based edit models normally ignore it — but with aspect_ratio:"custom", gpt-image-2-edit outputs exactly width×height (both required).",
      "maximum": 4096,
      "minimum": 256,
      "type": "integer",
    },
  },
  "required": [
    "model",
    "prompt",
    "image_url",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_image_generate 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "aspect_ratio": {
      "description": "Aspect ratio for resolution-based models (e.g. "16:9"). gpt-image-2/-edit support 1:1, 3:2, 2:3, 4:3, 3:4, 4:5, 16:9, 9:16, 21:9, 1.91:1 at 1K/2K — at 4K only 16:9, 9:16, 21:9, 1.91:1. Special value "custom" makes gpt-image-2/-edit use width×height as the exact output size (both required, each a multiple of 16, longest edge ≤3840, total pixels 655,360–8,294,400; missing dimensions or out-of-range values return 400). seedream-* / nano-banana-* accept their own sets; an unsupported value is rejected with the list of allowed ratios.",
      "minLength": 1,
      "type": "string",
    },
    "background": {
      "description": "Background handling for models that support it (e.g. gpt-image-2 transparent PNGs): auto (default), opaque, transparent.",
      "enum": [
        "auto",
        "opaque",
        "transparent",
      ],
      "type": "string",
    },
    "cfg": {
      "description": "Classifier-free guidance scale (0-20) for diffusion models that expose it (flux.*, z-image-turbo, qwen-image, sdxl-family). Model default if omitted.",
      "maximum": 20,
      "minimum": 0,
      "type": "number",
    },
    "guidance_scale": {
      "description": "Guidance scale (0-50) — alias recognized by the endpoint for models that name the parameter guidance_scale. Prefer cfg unless the model documents guidance_scale.",
      "maximum": 50,
      "minimum": 0,
      "type": "number",
    },
    "height": {
      "description": "Output height in pixels (256-4096) for megapixel-based models. Default: 1024. Resolution-based models ignore it unless aspect_ratio:"custom" (see width).",
      "maximum": 4096,
      "minimum": 256,
      "type": "integer",
    },
    "idea": {
      "description": "Non-English description (e.g. Korean); the server translates it before generation. Use prompt for English text.",
      "minLength": 1,
      "type": "string",
    },
    "loras": {
      "description": "Apply trained LoRA(s): [{url, weight}] with the weights URL from xbrush_lora_train output and weight 0-2. Use with a LoRA-capable base model (e.g. flux.1-dev, qwen-image, z-image-turbo, netayume-v4, anima-base) and include the LoRA's trigger word in the prompt.",
      "items": {
        "additionalProperties": false,
        "properties": {
          "url": {
            "description": "Trained LoRA weights URL (from a completed xbrush_lora_train request).",
            "format": "uri",
            "type": "string",
          },
          "weight": {
            "description": "LoRA strength 0-2 (1 = trained strength).",
            "maximum": 2,
            "minimum": 0,
            "type": "number",
          },
        },
        "required": [
          "url",
          "weight",
        ],
        "type": "object",
      },
      "minItems": 1,
      "type": "array",
    },
    "model": {
      "description": "Image model to use (e.g. z-image-turbo, flux.2-pro, seedream-5.0-pro, nano-banana-2, gpt-image-2, hunyuan-image-3.0-instruct). Use xbrush_list_models(category='image') to see available models.",
      "type": "string",
    },
    "n": {
      "description": "Number of images to generate (1-8). Default: 1.",
      "maximum": 8,
      "minimum": 1,
      "type": "integer",
    },
    "negative_prompt": {
      "description": "Elements to exclude from the generated image.",
      "type": "string",
    },
    "prompt": {
      "description": "Text description of the image to generate (English recommended — for other languages use idea).",
      "minLength": 1,
      "type": "string",
    },
    "quality": {
      "description": "Output quality tier. Applies to byResolutionAndQuality models (gpt-image-2/-edit); higher = better and more expensive. Server default is high if omitted.",
      "enum": [
        "low",
        "medium",
        "high",
      ],
      "type": "string",
    },
    "resolution": {
      "description": "Output resolution tier for resolution-based models (gpt-image-2, seedream-*, nano-banana-pro/2). Examples: "1K", "2K", "4K" (nano-banana-2 also "0.5K"). Ignored by megapixel-based models — use width/height for those.",
      "minLength": 1,
      "type": "string",
    },
    "sampler": {
      "description": "Sampler name for diffusion models that expose it (free-form, passed through; model-validated).",
      "minLength": 1,
      "type": "string",
    },
    "scheduler": {
      "description": "Diffusion scheduler name for models that expose it. Server currently accepts "simple" only (rejects others with the allowed list).",
      "minLength": 1,
      "type": "string",
    },
    "seed": {
      "description": "Random seed for reproducible results.",
      "type": "integer",
    },
    "trigger_word": {
      "description": "LoRA trigger word to prepend/inject when generating with a trained LoRA (alternative to writing it in the prompt yourself).",
      "minLength": 1,
      "type": "string",
    },
    "width": {
      "description": "Output width in pixels (256-4096) for megapixel-based models (flux.*, z-image-turbo, etc.). Default: 1024. Resolution-based models (gpt-image-2, seedream-*, nano-banana-*) normally ignore it — but with aspect_ratio:"custom", gpt-image-2/-edit output exactly width×height (both required).",
      "maximum": 4096,
      "minimum": 256,
      "type": "integer",
    },
  },
  "required": [
    "model",
    "prompt",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_list_models 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "category": {
      "description": "Filter by top-level category: image, video, audio, text (chat LLMs), or utility. Omit to list all.",
      "enum": [
        "image",
        "video",
        "audio",
        "text",
        "utility",
      ],
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_music_generate 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "duration": {
      "description": "Requested duration in seconds (5-300). Model may round to its native clip length (lyria3 returned ~30s for a 5s request).",
      "maximum": 300,
      "minimum": 5,
      "type": "integer",
    },
    "image_url": {
      "description": "Optional reference image URL — the model derives mood/style from it (image-conditioned music).",
      "format": "uri",
      "type": "string",
    },
    "model": {
      "description": "Music model ID: lyria2 (0.13 credits/track), lyria3 (0.052), lyria3-pro (0.104). Optional — server picks a default; other values are rejected with the supported list.",
      "type": "string",
    },
    "negative_prompt": {
      "description": "Styles/elements to exclude from the generated music.",
      "type": "string",
    },
    "prompt": {
      "description": "Text description of the music to generate (genre, mood, instruments, tempo).",
      "minLength": 1,
      "type": "string",
    },
    "seed": {
      "description": "Random seed for reproducibility.",
      "type": "integer",
    },
  },
  "required": [
    "prompt",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_tts_generate 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "emotion": {
      "description": "Emotion preset (MiniMax voices): happy, sad, angry, fearful, disgusted, surprised, calm, fluent, whisper.",
      "enum": [
        "happy",
        "sad",
        "angry",
        "fearful",
        "disgusted",
        "surprised",
        "calm",
        "fluent",
        "whisper",
      ],
      "type": "string",
    },
    "language": {
      "description": "DEPRECATED — the endpoint no longer recognizes a language field (ignored). Voices are multilingual; write the text in the target language.",
      "type": "string",
    },
    "model": {
      "description": "TTS model ID: eleven-v3 (ElevenLabs, 0.12 credits/1k chars, works without voice_id), speech-2.8-hd / speech-2.8-turbo / speech-2.6-hd (MiniMax, need a moss_audio_* voice_id), seed-tts-2.0 (ByteDance preset voices, 0.039) or seed-icl-2.0 (ByteDance, needs a cloned xbseed_* voice_id, 0.039). Optional — server default is a MiniMax model (which needs voice_id). See xbrush_list_models(category='audio').",
      "type": "string",
    },
    "output_format": {
      "description": "Requested audio container/format hint passed to the provider (e.g. 'mp3', 'wav'). Provider-dependent — eleven-v3 returned mp3 regardless in testing; Seed voices return wav.",
      "minLength": 1,
      "type": "string",
    },
    "pitch": {
      "description": "Pitch shift in semitones (-12..12) for providers that support it (MiniMax). Default 0.",
      "maximum": 12,
      "minimum": -12,
      "type": "number",
    },
    "speed": {
      "description": "Speech rate multiplier (0.5-2.0). Default: 1.0.",
      "maximum": 2,
      "minimum": 0.5,
      "type": "number",
    },
    "style": {
      "description": "Style exaggeration 0-1 (ElevenLabs style knob). Default provider-defined.",
      "maximum": 1,
      "minimum": 0,
      "type": "number",
    },
    "text": {
      "description": "Text to synthesize (non-blank, ≤10,000 characters).",
      "maxLength": 10000,
      "minLength": 1,
      "type": "string",
    },
    "voice_id": {
      "description": "Voice identifier. REQUIRED for MiniMax speech-* (moss_audio_* from xbrush_list_voices(model='speech-2.8-hd')), seed-icl-2.0 (xbseed_* from xbrush_voice_clone) and seed-tts-2.0 (preset name). For eleven-v3 a preset name like 'Rachel' or 'Aria' (xbrush_list_voices(model='eleven-v3')); omit for the default.",
      "type": "string",
    },
    "with_timestamps": {
      "description": "true → use the timestamped variant (POST /v1/tts-wt/generate): the result carries character-level start/end times (alignment arrays) for subtitles/karaoke. Only model, voice_id, speed and style apply on that path; it completes inline (~2-7s) and the audio + alignment are read back with xbrush_get_request.",
      "type": "boolean",
    },
  },
  "required": [
    "text",
  ],
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_video_lip_sync 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "audio_url": {
      "description": "URL of the speech audio to lip-sync. Alternative: text + voice_id (built-in TTS).",
      "format": "uri",
      "type": "string",
    },
    "duration": {
      "description": "Output duration in seconds (1-60). Model default if omitted.",
      "maximum": 60,
      "minimum": 1,
      "type": "number",
    },
    "image_url": {
      "description": "URL of a still portrait photo to animate — talking photo (fabric-1.0/-fast). Provide video_url OR image_url.",
      "format": "uri",
      "type": "string",
    },
    "model": {
      "description": "Lip-sync model ID: pixverse-lipsync / infinite-talk (video input), fabric-1.0 / fabric-1.0-fast (still-photo input, 'talking photo'). Defaults to the server's default model.",
      "type": "string",
    },
    "resolution": {
      "description": "Output resolution tier — currently "480p" or "720p" (higher costs more; e.g. fabric-1.0 480p 0.104 vs 720p 0.195 credits/sec). Server-validated.",
      "minLength": 1,
      "type": "string",
    },
    "text": {
      "description": "Text to speak via built-in TTS instead of audio_url (use with voice_id; see xbrush_list_voices).",
      "type": "string",
    },
    "video_url": {
      "description": "URL of the source face video (video-driven models). Provide video_url OR image_url.",
      "format": "uri",
      "type": "string",
    },
    "voice_id": {
      "description": "Voice for built-in TTS when using text (from xbrush_list_voices).",
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`도구 스키마 스냅샷 > xbrush_watermark_add 1`] = `
{
  "properties": {},
  "type": "object",
}
`;
